Email Display, L33T Validation Accuracy, Karan Lidor

--- a/static/bootstrap-custom.css
+++ b/static/bootstrap-custom.css
@@ -294,4 +294,14 @@ img.logo {
 .btn {
   margin-bottom: 0.5vw;
 }
-div.alert{font-size: 15px}
+div.alert{
+  font-size: 15px;
+  font-weight: bold;
+}
+td a{
+  color: #FFF;
+}
+td a:hover{
+  color: #FFF;
+  text-decoration: none;
+}
