Added support for DistilBERT

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,9 @@
                 </div>
             </div>
             <div class="col-sm-9 col-md-10">
-                <img src="{{ url_for('static', filename='icon.png') }}" class="logo"/>
+                <a href="{{ url_for('home', category='Transfers') }}" >
+                    <img src="{{ url_for('static', filename='icon.png') }}" class="logo"/>
+                </a>
                 <div class="pull-right">
                     <!-- <span class="text-muted"><b>1</b>–<b>50</b> of <b>160</b></span>
                     <div class="btn-group btn-group-sm">
