--- a/templates/testntrain.html
+++ b/templates/testntrain.html
@@ -17,7 +17,9 @@
                 </div> 
             </div>
             <div class="col-sm-6 col-md-8">
-                <img src="{{ url_for('static', filename='icon.png') }}" class="logo" style="left: 40%;"/>
+                <a href="{{ url_for('home', category='Transfers') }}" > 
+                    <img src="{{ url_for('static', filename='icon.png') }}" class="logo" style="left: 40%;"/>
+                </a>
             </div>
             <div class="col-sm-3 col-md-2"></div>
         </div>
