--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,11 @@
                         {% else %}
                             <li><a href="{{ url_for('home', category='Transfers') }}"> Transfers </a></li>
                         {% endif %}
+                        {% if category=='Death' %}
+                            <li class="active"><a href="{{ url_for('home', category='Death') }}"> Death </a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('home', category='Death') }}"> Death </a></li>
+                        {% endif %}    
                         {% if category=='Retirements' %}
                             <li class="active"><a href="{{ url_for('home', category='Retirements') }}"> Retirements </a></li>
                         {% else %}
