--- a/templates/results.html
+++ b/templates/results.html
@@ -53,6 +53,11 @@
                             <li class="active"><a href="{{ url_for('results', category='Transfers') }}"> Transfers </a></li>
                         {% else %}
                             <li><a href="{{ url_for('results', category='Transfers') }}"> Transfers </a></li>
+                            {% endif %}
+                        {% if category=='Death' %}
+                            <li class="active"><a href="{{ url_for('home', category='Death') }}"> Death </a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('home', category='Death') }}"> Death </a></li>
                         {% endif %}
                         {% if category=='Retirements' %}
                             <li class="active"><a href="{{ url_for('results', category='Retirements') }}"> Retirements </a></li>
